--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
                 <input type="date" id="billDate" class="billdate border border-gray-300 rounded px-2 py-1 mr-auto focus:outline-none focus:ring-2 focus:ring-blue-500">
             </div>
             <div class="flex items-center mb-2 farmer-name">
-                <label for="farmerName" class="mr-2 text-sm">Farmer Name:</label>
-                <select id="farmerName" class="farmername border border-gray-300 rounded px-2 py-1 w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
-                    <option value="" disabled selected>Select a Farmer</option>
-                    
-                </select>
+                <label for="farmerName" class="mr-2">Farmer Name:</label>
+                <input type="text" id="farmerName" list="farmerList" placeholder="Type or Select a Farmer"
+                    class="farmername border border-gray-300 rounded px-2 py-1 w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                <datalist id="farmerList">
+                    <!-- Farmer names will be dynamically loaded here -->
+                </datalist>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <div>
