--- a/cow_billing_page.html
+++ b/cow_billing_page.html
@@ -113,11 +113,11 @@
                 <div class="flex justify-between mt-2">
                     <div>
                         <span class="font-bold">Owner Name:</span>
-                        <span>Nabisab Mulla</span>
+                        <span class="ownername" >Nabisab Mulla</span>
                     </div>
                     <div>
                         <span class="font-bold">Mobile Number:</span>
-                        <span>7259610916</span>
+                        <span class="ownernumber">7259610916</span>
                     </div>
                 </div>
             </div>
@@ -132,4 +132,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
